--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,3 @@
 lib_LIBRARIES = libcrypter.a
 libcrypter_a_SOURCES = crypter.c
-libcrypter_a_CPPFLAGS = -Wall -std=c99
+libcrypter_a_CPPFLAGS = -Wall 
