--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,6 @@
+includedir=$(exec_prefix)/lib
 lib_LIBRARIES = libcrypter.a
 libcrypter_a_SOURCES = crypter.c
 libcrypter_a_CPPFLAGS = -Wall 
+noinst_HEADERS = crypter.h
+noinst_LIBRARIES = libcrypter.a
