--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,9 @@
-lib_LIBRARIES = libcrypter.a
-libcrypter_a_SOURCES = crypter.c crypter.h
-libcrypter_a_CPPFLAGS = -Wall 
-noinst_LIBRARIES = libcrypter.a
+bin_PROGRAMS = modaler modalgen
+
+modaler_SOURCES = modaler.c
+modaler_CPPFLAGS = -Wall -I$(top_srcdir)/libcrypter
+modaler_LDADD = $(top_srcdir)/libcrypter/libcrypter.a
+
+modalgen_SOURCES = modalgen.c
+modalgen_CPPFLAGS = -Wall -I$(top_srcdir)/libcrypter
+modalgen_LDADD = $(top_srcdir)/libcrypter/libcrypter.a
