--- a/Makefile.in
+++ b/Makefile.in
@@ -186,7 +186,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = src tests
+SUBDIRS = libcrypter src
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
