--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,8 +2,8 @@ bin_PROGRAMS = modaler modalgen
 
 modaler_SOURCES = modaler.c
 modaler_CPPFLAGS = -Wall -I$(top_srcdir)/libcrypter
-modaler_LDADD = $(top_srcdir)/libcrypter/libcrypter.a
+modaler_LDADD = $(top_srcdir)/libcrypter/libcrypter.la
 
 modalgen_SOURCES = modalgen.c
 modalgen_CPPFLAGS = -Wall -I$(top_srcdir)/libcrypter
-modalgen_LDADD = $(top_srcdir)/libcrypter/libcrypter.a
+modalgen_LDADD = $(top_srcdir)/libcrypter/libcrypter.la
