Improved error message when looking for libraries

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.65])
-AC_INIT([crypter],[1.2.2],[soporte@er-technology.net],[],[http://github.com/tcpip4000/crypter])
+AC_INIT([crypter],[1.2.3],[soporte@er-technology.net],[],[http://github.com/tcpip4000/crypter])
 AM_INIT_AUTOMAKE
 AC_CONFIG_MACRO_DIR([m4])
 LT_PREREQ([2.2])
@@ -29,21 +29,23 @@ fi
 
 # Checks for existence
 if test "x${have_gpg_error}" = xno; then
-  echo "Error: -----------------------------------"
-  echo " The gpg_error library is required to     "
-  echo " build crypter. Stopping...               "
-  echo " Check 'config.log' for more information. "
-  echo "------------------------------------------"
-  (exit 1); exit 1;
+    echo ""
+    echo "Error: -----------------------------------"
+    echo " The gpg_error library is required to     "
+    echo " build crypter. Stopping...               "
+    echo " Check 'config.log' for more information. "
+    echo "------------------------------------------"
+    (exit 1); exit 1;
 fi
 
 if test "x${have_gcrypt}" = xno; then
-  echo "Error: -----------------------------------"
-  echo " The gcrypt library and header file is   "
-  echo " required to build crypter. Stopping...   "
-  echo " Check 'config.log' for more information. "
-  echo "------------------------------------------"
-  (exit 1); exit 1;
+    echo ""
+    echo "Error: -----------------------------------"
+    echo " The gcrypt header and library file is   "
+    echo " required to build crypter. Stopping...   "
+    echo " Check 'config.log' for more information. "
+    echo "------------------------------------------"
+    (exit 1); exit 1;
 fi
 
 # Checks for typedefs, structures, and compiler characteristics.
