Added 'as-needed' flag, tested build on OpenIndiana

--- a/libcrypter/Makefile.in
+++ b/libcrypter/Makefile.in
@@ -182,7 +182,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 noinst_LTLIBRARIES = libcrypter.la
 libcrypter_la_SOURCES = crypter.c crypter.h
-libcrypter_la_CPPFLAGS = -Wall 
+libcrypter_la_CPPFLAGS = -Wall -Wl,--as-needed 
 all: all-am
 
 .SUFFIXES:
