--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -186,10 +186,10 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 modaler_SOURCES = modaler.c
-modaler_CPPFLAGS = -Wall -I$(top_srcdir)/libcrypter
+modaler_CPPFLAGS = -Wall -Wl,--as-needed -I$(top_srcdir)/libcrypter
 modaler_LDADD = $(top_srcdir)/libcrypter/libcrypter.la
 modalgen_SOURCES = modalgen.c
-modalgen_CPPFLAGS = -Wall -I$(top_srcdir)/libcrypter
+modalgen_CPPFLAGS = -Wall -Wl,--as-needed -I$(top_srcdir)/libcrypter
 modalgen_LDADD = $(top_srcdir)/libcrypter/libcrypter.la
 all: all-am
 
