--- a/libcrypter/Makefile.am
+++ b/libcrypter/Makefile.am
@@ -1,3 +1,3 @@
 noinst_LTLIBRARIES = libcrypter.la
 libcrypter_la_SOURCES = crypter.c crypter.h
-libcrypter_la_CPPFLAGS = -Wall 
+libcrypter_la_CPPFLAGS = -Wall -Wl,--as-needed 
