--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,7 @@ AC_SEARCH_LIBS([gcry_cipher_decrypt], [gcrypt], [have_gcrypt=yes])
 
 # Checks for headers
 AC_CHECK_HEADERS([stdlib.h string.h stdio.h crypter.h])
-AS_IF(["x${have_gcrypt}" = xyes],
+AS_IF([test "x${have_gcrypt}" = xyes],
     AC_CHECK_HEADERS([gcrypt.h], [], [have_gcrypt=no]))
 
 # Checks for existence
